--- a/twitter-api/package.json
+++ b/twitter-api/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
+    "multer": "*",
+    "sharp": "^0.31.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
